# fprime-zephyr-reference

./: .clangd  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README.org  docker-compose.yml  prj.conf  project.cmake  run.sh  settings.ini  west.yml
.github/workflows/: ci.yml
.west/: config
BaseDeployment/: CMakeLists.txt  Main.cpp  README.md  prj.conf  settings.ini  west.yml
BaseDeployment/Top/: BaseDeploymentPackets.xml  BaseDeploymentTopology.cpp  BaseDeploymentTopology.hpp  BaseDeploymentTopologyDefs.hpp  CMakeLists.txt  instances.fpp  topology.fpp
BaseDeployment/config/: TlmChanImplCfg.hpp
BaseDeployment/config/kconfig/: Kconfig.debug  Kconfig.fprime  Kconfig.hardware
Components/: CMakeLists.txt
Components/Led/: Led.cpp  Led.fpp  Led.hpp
LedBlinker/: CMakeLists.txt  Main.cpp  settings.ini  west.yml
LedBlinker/.west/: config
LedBlinker/Top/: CMakeLists.txt  LedBlinkerTopology.cpp  LedBlinkerTopology.hpp  instances.fpp  topology.fpp
bare-zephyr-ref/: prj.conf  west.yml
bare-zephyr-ref/boards/: sam_v71_xult_samv71q21b.overlay
bare-zephyr-ref/src/: main.c
boards/: sam_v71_xult_samv71q21b.overlay
config/: FpConfig.h
zephyr-test/.west/: config
zephyr-test/smoketest/: CMakeLists.txt  build.out
